<resources>
    <string name="app_name">DubizzleAndroidChallenge</string>
    <string name="ad_activity_name">Ad Activity</string>
    <string name="action_settings">Settings</string>
    <string name="error_no_content_message">No ads found</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="error_generic_message">Oops, something went wrong</string>
    <string name="items_for_sale">Items For sale</string>
    <string name="no_items_found">No Items found</string>
    <string name="search">Search</string>
    <string name="price">Price :</string>
    <string name="ad_title">Ad Title :</string>
    <string name="posted_on">Posted On :</string>
</resources>
